数値表現を変更

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>委員長の美味しいモツ鍋</title>
 
     <script src="phina.0.2.1.min.js"></script>
+    <script src="BigInteger.min.js"></script>
 	<script src="game.js"></script>
 	<style>
 	body{
-	// cursor:none;
 	 background: gray;
 	}
 	</style>
