--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>委員長の美味しいモツ鍋</title>
 
-    <script src='http://cdn.rawgit.com/phi-jp/phina.js/v0.2.1/build/phina.min.js'></script>
+    <script src='https://cdn.rawgit.com/phi-jp/phina.js/v0.2.1/build/phina.min.js'></script>
     <script src="BigInteger.min.js"></script>
 	<script src="game.js"></script>
 	<style>
